# montecarlo

./: .editorconfig  .gitignore  Cargo.toml  Makefile  azure-pipelines.yml
src/: lib.rs  main.rs  montecarlo_pi.rs  prelude.rs
src/montecarlo_pi/: parallel.rs  prelude.rs  serial.rs
