[package]
name = "montecarlo-pi"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

[dependencies]
anyhow = "=1.0.38"
dotenv = "=0.15.0"
futures = "=0.3.12"
num_cpus = "=1.13.0"
rand = "=0.8.3"
structopt = "=0.3.21"
tracing = "=0.1.22"
tracing-subscriber = "=0.2.15"

[dependencies.tokio]
version = "=1.18.5"
features = ["macros", "rt-multi-thread", "sync"]
