[package]
name = "montecarlo-pi"
version = "0.1.0"
authors = ["Satoru Sukawa <sukawasatoru.github@outlook.jp>"]
edition = "2018"

[dependencies]
anyhow = "=1.0.75"
dotenv = "=0.15.0"
futures = "=0.3.29"
num_cpus = "=1.16.0"
rand = "=0.8.5"
structopt = "=0.3.26"
tokio = { version = "=1.34.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "=0.1.40"
tracing-subscriber = "=0.3.18"
